fixed menu overflow error by changing overflow to overflow-y

--- a/css/portCSS.css
+++ b/css/portCSS.css
@@ -85,7 +85,6 @@ h3{
   height: 100vh;
 	position: absolute;
   opacity: 0;
-	padding-top: 100px;
     -webkit-transition: opacity 2s ease-in, padding-top 1s ease-out;
        -moz-transition: opacity 2s ease-in, padding-top 1s ease-out;
         -ms-transition: opacity 2s ease-in, padding-top 1s ease-out;
